--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'css/registration/login.css' %}">
 </head>
 <body>
+
+    {% include "navbar.html" %}
+
     {% block content %}
     
     {% endblock content %}
