--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,15 @@
-{% extends '_base.html' %}
-
-{% block title %} Login {% endblock title %}
-
-{% block content %}
-
-<div class="login-box">
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="{% static 'css/registration/login.css' %}">
+</head>
+<body>
+  <div class="login-box">
     <h2>Login</h2>
     {% if form.errors %}
         <p>username or password is wrong</p>
@@ -28,5 +33,5 @@
       </a>
     </form>
   </div>
-
-{% endblock content %}
+</body>
+</html>
