--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,6 +25,7 @@
       </div>
       <div class="reset-txt">
         <a href="{% url 'password_reset' %}">Forgot password?</a>
+        <p>if you have not account <a style="margin-bottom: -1px;" href="{% url 'register' %}">sign up</a></p>
       </div>
       <a href="#">
         <span></span>
