create edit profile for users

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="my-navbar">
     <a href="#" class="logo">Sociality</a>
     {% if request.user.is_authenticated %}
     <ul>
