--- a/templates/registration/dashboard.html
+++ b/templates/registration/dashboard.html
@@ -6,5 +6,6 @@
 
 <h1>Dashboard</h1>
 <p>Welcome to dashboard page</p>
+You can <a href="{% url 'edit' %}">edit your profile</a> or <a href="{% url 'password_change' %}">change your password</a>.
 
 {% endblock content %}
