--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="{% static 'css/registration/login.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
   <div class="login-box">
@@ -35,6 +36,9 @@
         <input type="hidden" name="next" value="{{ next }}">
         <input class="login-btn" type="submit" value="Login">
       </a>
+      <div class="auth-google">
+        {% include 'registration/google_btn.html' %}
+      </div>
     </form>
   </div>
 </body>
